[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pause-Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Titlescreen/Exit-pressed.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Titlescreen/Resume.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Titlescreen/Resume-pressed.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Titlescreen/Exit.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Titlescreen/Menu.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Titlescreen/Menu-pressed.png" type="Texture" id=7]

[node name="Pause-Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.0161, 1.22668 )
color = Color( 1, 1, 1, 0.47451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 1.62246, 1.70576 )
size_flags_horizontal = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 170.0
margin_top = 20.0
margin_right = 470.0
margin_bottom = 340.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_top = 57.0
margin_right = 300.0
margin_bottom = 262.0
size_flags_horizontal = 4

[node name="TextureButton03" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 65.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton01" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 300.0
margin_bottom = 126.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="TextureButton02" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 300.0
margin_bottom = 205.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton03" to="." method="_on_TextureButton03_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton01" to="." method="_on_TextureButton01_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton02" to="." method="_on_TextureButton02_pressed"]
